# freelance_qa

./: .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  samples.json
freelance_qa/: __main__.py  config.py  llm.py  main.py  models.py  prompts.py
freelance_qa/cli/: __init__.py  chat.py  init_db.py
