[project]
name = "freelance-qa"
version = "0.1.0"
description = "Answer questions about freelancers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
freelance-qa = "freelance_qa.main:main"